--- a/semester-1/tugas-modul-1.ipynb
+++ b/semester-1/tugas-modul-1.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
+   "name": "python38564bit55d503eee2084ee79dc354b1a702c1c7",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python"
   }
  },
